# comfyui-deepseek

./: README.md  __init__.py  deepseeknode.py  deepseeknodes.py  pyproject.toml
.github/workflows/: publish.yml
