[project]
name = "comfyui-deepseek"
description = "nodes for deepseek api" 
version = "1.0.8"
license = { file = "LICENSE" }
dependencies = ["openai"]

[project.urls]
Repository = "https://github.com/yanhuifair/comfyui-deepseek"
[tool.comfy]
PublisherId = "fffffair"
DisplayName = "comfyui-deepseek"
Icon = ""
